test/semantic_errors/invalid_array_decl1.mc
void main() {
    int a[]; /* cannot declare array without size */
}